# iced_genealogy

./: Cargo.toml
graph/: Cargo.toml
graph/src/: graph.rs  lib.rs
graph/src/node/: genealogical_node.rs  mod.rs
menubar/: Cargo.toml
menubar/src/: lib.rs
src/: context_menu.rs  genealogical_node.rs  graph.rs  main.rs  side_panel.rs
src/graph/: mod.rs  node.rs
